# course-work-bank

./: .coverage  .gitignore  README.md  data_loader.py  demo.py  main.py  main_demo.py  products.json  pyproject.toml  requirements.txt  run_checks.ps1  views.py  web_app.py
data/: report.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_f2aa7d9e692bbc64___init___py.html  z_f2aa7d9e692bbc64_category_py.html  z_f2aa7d9e692bbc64_exceptions_py.html  z_f2aa7d9e692bbc64_lawn_grass_py.html  z_f2aa7d9e692bbc64_loader_py.html  z_f2aa7d9e692bbc64_order_py.html  z_f2aa7d9e692bbc64_product_py.html  z_f2aa7d9e692bbc64_smartphone_py.html  z_f39597dce3aed80b___init___py.html  z_f39597dce3aed80b_category_py.html  z_f39597dce3aed80b_loader_py.html  z_f39597dce3aed80b_product_py.html
models/: product.py
modules/: api_client.py  card_info.py  cashback.py  categories.py  greet.py  report.py  reports.py  search.py  services.py  transactions.py
shop/: base_product.py  category.py  lawn_grass.py  loader.py  product.py  smartphone.py
src/: category.py  mixins.py  product.py
src/shop/: abstract_classes.py  category.py  exceptions.py  lawn_grass.py  mixins.py  order.py  product.py  smartphone.py
templates/: index.html
tests/: conftest.py  test_abstract_mixin.py  test_category.py  test_inheritance.py  test_loader.py  test_order.py  test_product.py  test_services.py  test_shop.py  test_shop_classes.py  test_smartphone_grass.py
